--- a/dev/sass/app.css
+++ b/dev/sass/app.css
@@ -320,6 +320,18 @@ a {
       .author-card .sns-links li .icon-medium:hover {
         color: #0BE370; }
 
+.tag-card {
+  text-align: center; }
+  .tag-card .tag-name {
+    width: 100%;
+    font-size: 16px;
+    color: #4E4E4E;
+    font-weight: 500;
+    margin: 12px 0 6px; }
+  .tag-card .description p {
+    font-size: 14px;
+    line-height: 20px; }
+
 .article-item .post-meta .post-tag, .tags-card .tag, .tags-content .tag {
   display: inline-block;
   width: auto;
